--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.10.4",
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.high-definition": "14.0.11",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
